# prefrontal

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: CODEOWNERS
changelog.d/: 2026-07-13-care-recipient-roster.md  2026-07-13-changelog-fragments.md  2026-07-13-ios-app-intent-source.md  2026-07-13-ios-lint-ci.md  2026-07-13-parent-pack-situation-tools.md  2026-07-13-retire-shortcuts-onboarding.md  2026-07-13-source-provenance-enum.md  2026-07-14-blockers-surfaces.md  2026-07-14-blocking-dependencies-tracker.md  2026-07-14-briefing-refresh-button.md  2026-07-14-caregiver-situation-tools.md  2026-07-14-emotion-regulation-module.md  2026-07-14-hosted-onboarding-plan.md  2026-07-14-ios-apiclient-tests.md  2026-07-14-ios-battery.md  2026-07-14-ios-clarify.md  2026-07-14-ios-faceid-app-lock.md  2026-07-14-ios-faceid-consent-strand-fix.md  2026-07-14-ios-faceid-hang-watchdog.md  2026-07-14-ios-insights.md  2026-07-14-ios-mail-tab.md  2026-07-14-ios-richer-todos.md  2026-07-14-ios-self-care-review.md  2026-07-14-ios-situations.md  2026-07-14-ios-todos-scroll-fix.md  2026-07-14-ios-unit-test-target.md  2026-07-14-learned-receptivity-model.md  2026-07-14-native-push-only.md  2026-07-14-open-window-nudge.md  2026-07-14-per-user-modules.md  2026-07-14-per-user-packs.md  2026-07-14-reschedule-ui.md  2026-07-14-sensor-durability.md  2026-07-14-served-usage-guide.md  2026-07-14-situations-dashboard-card.md  2026-07-14-voice-braindump.md  2026-07-14-vulnerability-gate.md  2026-07-14-watchos-companion.md  2026-07-15-communication-translation.md  2026-07-15-ios-braindump-foundation-models.md  (+56 more)
deploy/: README.md  briefing.sh  calendar-sync.sh  coach.sh  com.morningstatic.prefrontal-coach.plist  com.morningstatic.prefrontal-household.plist  com.morningstatic.prefrontal-learn.plist  com.morningstatic.prefrontal-mail.plist  com.morningstatic.prefrontal.plist  com.prefrontal-briefing.plist  com.prefrontal-calendar.plist  com.prefrontal-coach.plist  com.prefrontal-household.plist  com.prefrontal-learn.plist  com.prefrontal-mail.plist  com.prefrontal-usage.plist  com.prefrontal.plist  household-sweeps.sh  install-launchd.sh  ios-shortcut.md  learn.sh  mail-fetch.sh  meta-glasses.md  package.sh  update.sh  usage-nudge.sh
desktop/: README.md  afterPack.js  loading.html  main.js  package-lock.json  package.json  preload.js  settings.html
docs/: README.md  architecture-review.md  coaching-agent.md  deployment.md  driver-pack.md  encouragement.md  entity-relationship.md  foundation-models-verification.md  guide.md  household-sheet.md  impulsivity.md  interventions.md  kids-info-tracker-template.xlsx  module-review.md  monetization.md  multi-tenant.md  n8n-dependency-audit.md  n8n-sync.md  one-sheet.html  parent-pack.html  projects-design.md  roadmap-vision.html  roadmap-vision.md  schema.md  shortcuts-to-native.md  triage-agent.md  whitepaper.md
ios/: .gitignore  .swiftlint.yml  README.md  Signing.local.xcconfig.example  Signing.xcconfig  project.yml
prefrontal/: __init__.py  actions.py  assistant.py  availability.py  blockers.py  braindump.py  briefing.py  clarify.py  classify.py  cli.py  clock.py  coaching.py  commitments.py  communication_translation.py  config.py  crypto.py  day_shape.py  delegation.py  delivery.py  departure.py  emotion_regulation.py  encouragement.py  focus_balance.py  geo.py  geocode.py  household.py  ics.py  impact.py  llm_json.py  log.py  mcp_server.py  next_thing.py  nudges.py  panic.py  people.py  projects.py  receptivity.py  reschedule.py  scheduling.py  self_care_review.py  (+11 more)
scripts/: collate_changelog.py
tests/: __init__.py  conftest.py  test_actions.py  test_admin.py  test_anthropic.py  test_apns.py  test_assistant.py  test_availability.py  test_available_hours.py  test_behavioral.py  test_blockers.py  test_braindump.py  test_briefing.py  test_calendar_sources.py  test_care_surface.py  test_changelog_fragments.py  test_chores.py  test_clarify.py  test_clarify_endpoints.py  test_classify.py  test_cli.py  test_clock.py  test_coaching.py  test_commitments.py  test_communication_translation.py  test_config.py  test_contract_available_hours.py  test_contract_location_settings.py  test_crypto.py  test_day_shape.py  test_db.py  test_delegation.py  test_delegation_send.py  test_delivery.py  test_departure.py  test_emotion_regulation.py  test_encouragement.py  test_feature_usage.py  test_geocode.py  (+67 more)
(+287 files in other folders)
