[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prefrontal"
version = "0.1.0"
description = "An open source executive function agent system."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Tom Fleischer" }]
keywords = ["executive-function", "agent", "adhd", "productivity", "memory", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    # Ships the IANA tz database so zoneinfo can resolve calendar zones even on
    # hosts without a system tzdata (calendar sync converts TZID times to UTC).
    "tzdata>=2024.1",
    # Expands recurring calendar events (RRULE) into concrete occurrences — ICS
    # feeds ship an unmodified repeat as a single past-dated master, so without
    # this a weekly event never lands in the near-term sync window.
    "python-dateutil>=2.9",
    # Seals per-user source credentials (IMAP passwords, Google refresh tokens)
    # at rest with Fernet before they touch the DB — see prefrontal/crypto.py.
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
# Opt-in cloud reasoning for the dashboard assistant. Local-first by default: the
# base install stays network-free and uses Ollama; install this extra and set
# ANTHROPIC_API_KEY to let the assistant use Claude (Ollama remains the fallback).
anthropic = [
    "anthropic>=0.40",
]
# Render a scannable QR for `prefrontal user connect-link --qr` (the iOS
# onboarding handoff). Pure-Python, no extra deps; opt-in so the base install
# stays lean — without it the command still prints the plain connect link.
qr = [
    "segno>=1.6",
]

[project.scripts]
prefrontal = "prefrontal.cli:main"

[project.urls]
Homepage = "https://github.com/jawsthegame/prefrontal"
Repository = "https://github.com/jawsthegame/prefrontal"

[tool.hatch.build.targets.wheel]
packages = ["prefrontal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
